--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 					<h2>About Me</h2>
 					<p>Hey I'm Harry. My mental health is displayed above.</p>
 			</div>
-
+			<div class="minor-section">
+				<!-- Note that all filenames use lowercase and no spaces -->
+					<h2>Contact</h2>
+					<p>He's on Mars now, so don't bother :3.</p>
+			</div>
 		</section>
 		<nav id="links">
 			<!-- Put links to labs here. -->
