--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="minor-section">
 				<!-- Note that all filenames use lowercase and no spaces -->
 					<h2>Contact</h2>
-					<p>He's on Mars now, so don't bother :3.</p>
+					<p>He's on Mars now, so don't bother :3</p>
 			</div>
 		</section>
 		<nav id="links">
