--- a/lab2/index.html
+++ b/lab2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 2 - HTML & CSS Starter</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,25 +23,15 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
-			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+			<h1>Hello World</h1>
+			<div class="member_1">
+					<h2>Harry Chou</h2>
+					<p>4th year AGPM major, he/him. Have experiences(just a bit) in HTML/CSS/JS. Likes gaming, playing piano, and cooking.</p>
 			</div>
 
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
+			<div class="member_2">
+					<h2>XXX</h2>
+					<p>XXX</p>
 			</div>
 		</section>
 		<nav id="links">
