--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
 					<p>He's on Mars now, so don't bother :3</p>
 			</div>
 		</section>
+		<h2>Links to Individual Assignments</h2>
 		<nav id="links">
-			<!-- Put links to labs here. -->
+			<a href="https://harrydyc0506.github.io/art101/lab1">Lab 1</a>
+			<a href="https://harrydyc0506.github.io/art101/lab2">Lab 2</a>
+			<a href="https://harrydyc0506.github.io/art101/lab3">Lab 3</a>
+			<a href="https://harrydyc0506.github.io/art101/lab4">Lab 4</a>
+			<a href="https://harrydyc0506.github.io/art101/lab5">Lab 5</a>
+			<a href="https://harrydyc0506.github.io/art101/lab6">Lab 6</a>
 		</nav>
 	</main>
 </body>
