Added background music

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -24,6 +24,7 @@
 	<main id="content">
 		<section>
 			<h1>Hello World</h1>
+			<audio src="/img/Pascal Rogé  Clair de Lune, Claude Debussy.mp3"></audio>
 			<div class="member_1">
 					<h2>Harry Chou</h2>
 					<p>4th year AGPM major, he/him. Have experiences(just a bit) in HTML/CSS/JS. Likes gaming, playing piano, and cooking.</p>
