Added audio and a gif

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1>Harry's Homepage</h1>
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="crazy_pug" src="./img/crazy_pug.jpg">
+					<img class="crazy_pug" src="./img/he-he-he-raccoon.gif">
 					<h2>About Me</h2>
 					<p>Hey I'm Harry. My mental health is displayed above.</p>
 			</div>
