--- a/index.html
+++ b/index.html
@@ -22,26 +22,28 @@
 	<main id="content">
 		<section>
 			<h1>Harry's Homepage</h1>
+			<img class="hehehe" src="./img/he-he-he-raccoon.gif">
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
-					<img class="crazy_pug" src="./img/he-he-he-raccoon.gif">
 					<h2>About Me</h2>
-					<p>Hey I'm Harry. My mental health is displayed above.</p>
+					<p>Hey I'm Harry, 4th year AGPM major, he/him. I have experiences(just a bit) in HTML/CSS/JS, and I'm looking forward to learning more in this course.</p> 
+					<p>Interests: Gaming, piano, cooking, movies, and animes.</p>
+					<p>Fun Facts: I can speak English, Mandarin, and Japanese.</p>
 			</div>
 			<div class="contact-info">
 				<!-- Note that all filenames use lowercase and no spaces -->
 					<h2>Contact</h2>
-					<p>He's on Mars now, so don't bother :3</p>
+					<p>dechou@ucsc.edu</p>
 			</div>
 		</section>
 		<h2>Links to Individual Assignments</h2>
 		<nav id="links">
-			<a href="https://harrydyc0506.github.io/art101/lab1">Lab 1</a>
-			<a href="https://harrydyc0506.github.io/art101/lab2">Lab 2</a>
-			<a href="https://harrydyc0506.github.io/art101/lab3">Lab 3</a>
-			<a href="https://harrydyc0506.github.io/art101/lab4">Lab 4</a>
-			<a href="https://harrydyc0506.github.io/art101/lab5">Lab 5</a>
-			<a href="https://harrydyc0506.github.io/art101/lab6">Lab 6</a>
+			<li><a href="lab1/index.html">Lab 1</a></li>
+			<li><a href="lab2/index.html">Lab 2</a></li>
+			<li><a href="lab3/index.html">Lab 3</a></li>
+			<li><a href="lab4/index.html">Lab 4</a></li>
+			<li><a href="lab5/index.html">Lab 5</a></li>
+			<li><a href="lab6/index.html">Lab 6</a></li>
 		</nav>
 	</main>
 </body>
