--- a/lab3/index.html
+++ b/lab3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3 - File Structure and File Transfer</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,25 +23,23 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 3 - File Structure and File Transfer</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>Overall, it's a very easy task. I used what I've worked on during InstallFest and edited them to meet the assignment requirement. 
+						The only challenge I had was probably just trying to get my screenshots organized, but it wasn't that big of a problem.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<p>This is the end result of my webpage. Screenshots are presented below.</p>
+					<img class="shots" src="./img/1.jpg">
+					<figcaption>Fig.1 - HTML Source Code</figcaption>
+					<img class="shots" src="./img/3.jpg">
+					<figcaption>Fig.2 - Webpage pt.1</figcaption>
+					<img class="shots" src="./img/4.jpg">
+					<figcaption>Fig.3 - Webpage pt.2</figcaption>
 			</div>
 		</section>
 		<nav id="links">
