--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<main id="content">
 		<section>
 			<h1>Harry's Homepage</h1>
-			<img class="portrait" src="./img/selfie.jpg">
+			<img class="portrait" src="./img/Selfie.jpg">
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
 					<h2>About Me</h2>
