--- a/lab5/index.html
+++ b/lab5/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5 - Data Types and Variables</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,25 +23,30 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+
+			<h1>Lab 5 - Data Types and Variables</h1>
+			<img class="image" src="./img/2.jpg">
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Overall it's pretty smooth and easy, we got every variables in and let the console print them without encountering any challenges.
+						<br>The only slight challenge is that the car in question is not with Harry at the moment so he'll need some time to find an image of it.
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>No significant problems were presented in our work. The only problem we had is to correctly put the image at our desired place (top right), 
+						<br>but this was resolved rather quickly.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<p>The result of our JavaScript file containing Harry's car's information is presented below.</p>
+			</div>
+
+			<div class="minor-section">
+					<h2>Script Output</h2>
+        			<script type="text/javascript" src="js/lab.js"></script>
 			</div>
 		</section>
 		<nav id="links">
