--- a/lab5/index.html
+++ b/lab5/index.html
@@ -25,7 +25,7 @@
 		<section>
 
 			<h1>Lab 5 - Data Types and Variables</h1>
-			<img class="image" src="./img/2.jpg">
+			<img class="image" src="./img/myCar.jpg">
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Overall it's pretty smooth and easy, we got every variables in and let the console print them without encountering any challenges.
